# linuxTest

./: Makefile  README.md  common.c  common.h  rudp  rudp.cpp  std.h  sudp  sudp.cpp  sysHeader.h  tags  ycm_extra_conf.py
chatroom/: Makefile  client.cpp  client.h  common.cpp  common.h  main_client  main_client.cpp  main_server  main_server.cpp  server.cpp  server.h  struct_data.h
cpp/: Makefile  chatClient.cpp  chatServer.cpp  client  philosopher.cpp  primer  primer.cpp  server  test  test.cpp  timeWheel.h  util.cpp  util.h
http_server/: Buffer.cpp  Buffer.h  FcgiConnection.cpp  FcgiConnection.h  FixedThreadPool.cpp  HttpConnection.cpp  HttpConnection.h  HttpParser.h  HttpServer.cpp  HttpServer.h  InetAddress.cpp  InetAddress.h  LRUCache.cpp  LRUCache.h  Log.cpp  Log.h  Socket.cpp  Socket.h  TcpConnection.cpp  TcpConnection.h  Thread.cpp  TimerHeap.cpp  TimerHeap.h  app  consts.h  dispatcher.cpp  dispatcher.h  epoller.cpp  epoller.h  eventloop.cpp  eventloop.h  eventloopThread.cpp  eventloopThread.h  eventloopThreadPool.cpp  eventloopThreadPool.h  fast_cgi.h  http.cpp  http.h  main  main.cpp  (+2 more)
io/: IOHeader.h  Makefile  app  chmod  chmod.c  copybymmap.c  cp.c  deepDir.c  dir.c  enumerateDir  filelock.c  mycp  newfile  select  sendtofifo  sendtofifo.c  size  size.c  t_readv  t_readv.c  temp  test  test.c  testselect.c  write  write.c
libeventTest/: t_1.c
net/: client  client.c  main.c  server  server.c
prac/: FixedThreadPool.h  Log.cpp  Log.h  Thread.h  (+9 more)
tecmake/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cpp
tecmake/Math/: CMakeLists.txt  Math.cpp  Math.h
(+108 files in other folders)
